// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test File ProductBox should show minimo value 1`] = `
<div
  className="ParceladoBox__ProductComplement-s41i0vs-0 clnbdj"
>
  ou 
  3
  x de
  <span
    className="Product__ProductCurrency-s1fzb5ed-3 gRgDZn"
  >
    R$
  </span>
  <span
    className="Product__ProductAmount-s1fzb5ed-4 UhmjH"
  >
    4
  </span>
</div>
`;

exports[`Test File ProductBox should show value parcel 1`] = `
<div
  className="ParceladoBox__ProductComplement-s41i0vs-0 clnbdj"
>
  ou 
  3
  x de
  <span
    className="Product__ProductCurrency-s1fzb5ed-3 gRgDZn"
  >
    R$
  </span>
  <span
    className="Product__ProductAmount-s1fzb5ed-4 UhmjH"
  >
    35,01
  </span>
</div>
`;

exports[`Test File ProductBox test with value below of minimunm 1`] = `
<div
  className="ParceladoBox__ProductComplement-s41i0vs-0 clnbdj"
>
  ou 
  2
  x de
  <span
    className="Product__ProductCurrency-s1fzb5ed-3 gRgDZn"
  >
    R$
  </span>
  <span
    className="Product__ProductAmount-s1fzb5ed-4 UhmjH"
  >
    5,00
  </span>
</div>
`;

exports[`Test File ProductBox test with value below of minimunm 2`] = `
<div
  className="ParceladoBox__ProductComplement-s41i0vs-0 clnbdj"
>
  ou 
  1
  x de
  <span
    className="Product__ProductCurrency-s1fzb5ed-3 gRgDZn"
  >
    R$
  </span>
  <span
    className="Product__ProductAmount-s1fzb5ed-4 UhmjH"
  >
    4,00
  </span>
</div>
`;
